--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!--css font-->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,200;1,300&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!--css custom-->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <title>F49 Project Team</title>
 </head>
 <body>
@@ -30,11 +27,11 @@
       </header>
     <div class="top-main">
         <div class="container">
+            <div class="container1"></div>
+            <div class="container2"></div>
+            <div class="container3"></div>
             <h1>Dapatkan Segera <span>Nama Hosting</span><br> Sesuai Keinginanmu</h1>
-            <p>Hanya disini Anda bisa mendapatkan harga termurah<br> dengan domain dan hosting dengan selera Anda.</p>
-            <div class="btn-wrapper">
-              <a href="#" class="btn"><span class="fa"></span>Klik Disini</a>
-            </div>
+            <p><span>Hostku </span> merupakan layanan Domain dan Hosting terbaik di Indonesia yang menawarkan berbagai paket lengkap dengan harga terjangkau dan berfokus pada pelanggan!</p>
         </div>
     </div>
 
@@ -46,8 +43,8 @@
                 </div>
                 <div class="search-domain">
                     <div class="domain-wrap">
-                        <input class="input-domain" type="text" placeholder="Ketik domain Anda disini"><br>
-                        <button class="button-domain" type="submit" value="submit">Cari Domain</button>
+                        <input class="input-domain" type="text" placeholder="exp: domainanda.com"><br>
+                        <button class="button-domain" type="submit" value="submit">Cari</button>
                     </div>
                 </div>
             </div>
@@ -61,28 +58,28 @@
             </div>
             <div class="content">
                 <div class="content-icon">
-                    <img src="ss/undraw_cloud_files_wmo8 (1).svg" alt="">
+                    <img src="./assets/img/undraw_cloud_files_wmo8 (1).svg" alt="">
                 </div>
                 <p class="text-judul">Instant Deploy</p>
                 <p class="text-info">Fitur eksklusif untuk membuat website dengan mudah & instan</p>
             </div>
             <div class="content">
                 <div class="content-icon">
-                    <img src="ss/undraw_team_ih79.svg" alt="">
+                    <img src="./assets/img/undraw_team_ih79.svg" alt="">
                 </div>
                 <p class="text-judul">Team Support</p>
                 <p class="text-info">Pelayanan terbaik ke tiap customer, anda adalah prioritas kami</p>
             </div>
             <div class="content">
                 <div class="content-icon">
-                    <img src="ss/undraw_going_up_ttm5.svg" alt="">
+                    <img src="./assets/img/undraw_going_up_ttm5.svg" alt="">
                 </div>
                 <p class="text-judul">Unlimited Bandwidth</p>
                 <p class="text-info">Bandwidth tanpa batas menjamin kelancaran website anda</p>
             </div>
             <div class="content">
                 <div class="content-icon">
-                    <img src="ss/undraw_server_status_5pbv.svg" alt="">
+                    <img src="./assets/img/undraw_server_status_5pbv.svg" alt="">
                 </div>
                 <p class="text-judul">Cloud Backup</p>
                 <p class="text-info">Backup harian ke Cloud menjamin keamanan data penting anda</p>
@@ -200,9 +197,10 @@
           </div>
         </div>
     </div>
+
     <div class="message-wrapper">
         <div class="container">
-          <div class="heading">
+          <div class="message-heading">
             <h1>Apakah anda siap untuk memulai web hosting anda bersama kami?</h1>
           </div>
           <span class="btn message">Mulai Daftar</span>
@@ -221,16 +219,3 @@
     </footer>
 </body>
 </html>
-
-<!-- 
-Source Image:
-https://www.freepik.com/free-vector/cloud-services-isometric-composition-with-conceptual-images-network-elements-storage-capsules-small-human-characters-vector-illustration_7199788.htm#page=1&query=illustration%20network%20connection&position=31
-
-https://www.freepik.com/free-vector/cloud-hosting-concept-illustration_6183217.htm#page=1&query=illustration%20network%20connection&position=40
-https://www.freepik.com/free-vector/wireless-technology-concept-4-glow-isometric-compositions-with-cloud-storage-voice-assistant-service-wireless-payment_6804380.htm
-https://www.freepik.com/free-vector/server-room-isometric-icon-database-connection-transfer-data-remote-cloud-storage-server-rack_4102278.htm#page=2&query=cloud+computing++network&position=11
-https://www.freepik.com/free-vector/scheme-data-transmission-isometric-secure-connection-cloud-computing-server-room-datacent_4102311.htm#page=2&query=cloud+computing++network&position=9
-
-
-    
-    >>
