--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-          <div class="header-left">
+          <div class="header-left" id="header-left">
             <!-- <img class="logo" src="assets/img/logo.png" style="height: 40px; width:auto">  -->
             Hostku
           </div>
@@ -203,9 +203,17 @@
           <div class="message-heading">
             <h1>Apakah anda siap untuk memulai web hosting anda bersama kami?</h1>
           </div>
+          <div class="scrolldown">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
           <span class="btn message">Mulai Daftar</span>
         </div>
+        
     </div>
+
+    
 
     <footer>
         <div class="container">
