--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <!--css custom-->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <title>F49 Project Team</title>
 </head>
 <body>
     <header>
         <div class="container">
           <div class="header-left" id="header-left">
-            <!-- <img class="logo" src="assets/img/logo.png" style="height: 40px; width:auto">  -->
             Hostku
           </div>
           <!-- Tambahkan ikon menu disini -->
@@ -37,9 +37,9 @@
 
     <div class="search-main">
         <div class="container">
-            <div class="item-domain">
+            <div class="item-domain animated fadeInDown">
                 <div class="search-text">
-                    <h2> Cari nama domain yang diinginkan</h2>
+                    <h2 class="">  Cari nama domain yang diinginkan</h2>
                 </div>
                 <div class="search-domain">
                     <div class="domain-wrap">
@@ -53,31 +53,32 @@
 
     <div class="contents">
         <div class="container">
-            <div class="heading" id="keunggulan">
-                <h2>service a better web awaits...</h2>
+            <div class="heading animated fadeInDown" id="keunggulan">
+                <h1 class="">Servis Kami</h1>
+                <p>Berikut adalah servis layanan yang kami berikan</p>
             </div>
-            <div class="content">
+            <div class="content animated bounceIn">
                 <div class="content-icon">
                     <img src="./assets/img/undraw_cloud_files_wmo8 (1).svg" alt="">
                 </div>
                 <p class="text-judul">Instant Deploy</p>
                 <p class="text-info">Fitur eksklusif untuk membuat website dengan mudah & instan</p>
             </div>
-            <div class="content">
+            <div class="content animated bounceIn">
                 <div class="content-icon">
                     <img src="./assets/img/undraw_team_ih79.svg" alt="">
                 </div>
                 <p class="text-judul">Team Support</p>
                 <p class="text-info">Pelayanan terbaik ke tiap customer, anda adalah prioritas kami</p>
             </div>
-            <div class="content">
+            <div class="content animated bounceIn">
                 <div class="content-icon">
                     <img src="./assets/img/undraw_going_up_ttm5.svg" alt="">
                 </div>
                 <p class="text-judul">Unlimited Bandwidth</p>
                 <p class="text-info">Bandwidth tanpa batas menjamin kelancaran website anda</p>
             </div>
-            <div class="content">
+            <div class="content animated bounceIn">
                 <div class="content-icon">
                     <img src="./assets/img/undraw_server_status_5pbv.svg" alt="">
                 </div>
@@ -89,9 +90,9 @@
     </div>
 
     <div class="product-wrapper">
-        <div class="container">
+        <div class="container animated fadeInDown">
           <div class="heading-product" id="produk_dan_layanan">
-             <h2>Produk dan Layanan Kami</h2>
+             <h1>Produk dan Layanan Kami</h1>
           </div>
           <div class="products">
             <div class="product">
@@ -199,7 +200,7 @@
     </div>
 
     <div class="message-wrapper">
-        <div class="container">
+        <div class="container animated fadeInDown">
           <div class="message-heading">
             <h1>Apakah anda siap untuk memulai web hosting anda bersama kami?</h1>
           </div>
@@ -216,8 +217,7 @@
     
 
     <footer>
-        <div class="container">
-         <!-- <img src="./ss/logo.png">-->
+        <div class="container animated fadeInDown">
             <div class="footer-logo">
                 Hostku
             </div>
